--- a/Assignment2/src/main/resources/application.properties
+++ b/Assignment2/src/main/resources/application.properties
@@ -1,2 +1,12 @@
 spring.application.name=Assignment2
 
+
+
+############MySql
+
+#spring.datasource.url= jdbc:mysql://localhost:3306/sql?useSSL=false
+#spring.datasource.username= root
+#spring.datasource.password=
+#
+#spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.MySQLDialect
+#spring.jpa.hibernate.ddl-auto=update
